--- a/golf-marketplace/netlify.toml
+++ b/golf-marketplace/netlify.toml
@@ -1,14 +1,13 @@
 [build]
   command = "npm install && npm run build"
+  publish = "golf-marketplace/.next"
 
 [build.environment]
   NODE_ENV = "production"
+  SKIP_ENV_VALIDATION = "true"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-
-[functions]
-  node_bundler = "esbuild"
 
 [[headers]]
   for = "/_next/static/*"
@@ -19,3 +18,6 @@
   for = "/api/*"
   [headers.values]
     Cache-Control = "no-store, no-cache, must-revalidate"
+
+[images]
+  remote_images = ["https://source.unsplash.com/.*", "https://images.unsplash.com/.*", "https://ext.same-assets.com/.*", "https://ugc.same-assets.com/.*"]
